init_size works

--- a/fillit/Makefile
+++ b/fillit/Makefile
@@ -21,11 +21,10 @@ all: $(NAME)
 $(NAME):
 		@gcc $(FLAGS) $(NAME) $(SRC)
 
-clean:
-		@rm -rf *.o
+clean: ;
 
 fclean: clean
 		@rm -rf $(NAME)
 
-re: fclean 
+re: fclean
 	@make
