--- a/fillit/Makefile
+++ b/fillit/Makefile
@@ -6,13 +6,13 @@
 #    By: rgaia <marvin@42.fr>                       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2017/10/11 23:03:39 by rgaia             #+#    #+#              #
-#    Updated: 2017/10/26 23:37:54 by sadamant         ###   ########.fr        #
+#    Updated: 2017/11/07 12:28:57 by sadamant         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = fillit
 
-SRC = fillit.c parse.c insert.c solve.c map.c
+SRC = fillit.c parse.c insert.c solve.c map.c fit.c tetrimino.c
 
 FLAGS = -Wall -Wextra -Werror -L../libft/. -lft -o
 
